# llm_judge_practice

./: .env  LICENSE  README.md  datasets.py  llm_evaluation_results_awssaa.csv  llm_evaluation_results_ethics.csv  pyproject.toml  test_judge_adujst_score.py  test_load_judge.py
openevals/: __init__.py  exact.py  llm.py  types.py  utils.py
openevals/code/: base.py  llm.py  mypy.py  pyright.py
openevals/code/e2b/: execution.py  pyright.py
openevals/code/e2b/sandbox/: files.py
openevals/json/: __init__.py  match.py
openevals/prompts/: __init__.py  code_correctness.py  conciseness.py  correctness.py  hallucination.py  rag_groundedness.py  rag_helpfulness.py  rag_retrieval_relevance.py
openevals/simulators/: __init__.py  multiturn.py  prebuilts.py
openevals/string/: __init__.py  embedding_similarity.py  levenshtein.py
tests/: test_conciseness.py  test_correctness.py  test_embedding_similarity.py  test_exact.py  test_hallucination.py  test_json.py  test_json_async.py  test_levenshtein.py  test_llm.py  test_llm_async.py  test_rag.py
tests/code/: test_code_llm_as_judge.py  test_code_llm_as_judge_async.py  test_code_typecheck.py  test_code_typecheck_async.py  test_extraction.py
tests/code/e2b/: test_execution.py  test_execution_async.py  test_typecheck.py  test_typecheck_async.py
tests/simulators/: test_multiturn.py  test_multiturn_async.py
