[project]
name = "openevals"
version = "0.1.0"
license = {text = "MIT"}
description = "Open-source evaluators for LLM applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.18",
    "langchain-openai>=0.3.6",
    "langsmith>=0.3.32",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "e2b-code-interpreter>=1.1.1",
    "langchain-anthropic>=0.3.12",
    "langchain-google-genai>=2.1.3",
    "langgraph>=0.3.30",
    "langgraph-sdk>=0.1.61",
    "llama-index>=0.12.34",
    "mypy>=1.15.0",
    "openai>=1.61.1",
    "pydantic>=2.10.6",
    "pyright>=1.1.396",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.9.5",
]

[project.optional-dependencies]
e2b-code-interpreter = [
    "e2b-code-interpreter>=1.1.1"
]

[tool.setuptools.packages.find]
include = ["openevals*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
